--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <h4>Email</h4>
-                            <p>contact@bochratayaichi.com</p>
+                            <p>aychabochra@gmail.com</p>
                         </div>
                         
                         <div class="contact-item">
